--- a/dianping/miniprogram/app.json
+++ b/dianping/miniprogram/app.json
@@ -23,7 +23,7 @@
   "tabBar":{
     "list": [
     {
-      "pagePath": "pages/index/index",
+      "pagePath": "pages/restaurant/index/index",
       "text": "Home"
     },
     {
